started translating strings into german

--- a/public/Index.html
+++ b/public/Index.html
@@ -11,19 +11,19 @@
 	<body>
 		<div id="container">
 			<div id="game">
-				<button onclick="playGame('rock')" class="my-button"><img src="aRock1.jpg"></button>
-				<button onclick="playGame('paper')" class="my-button"><img src="toiletpaper1.jpg"></button>
+				<button onclick="playGame('stein')" class="my-button"><img src="aRock1.jpg"></button>
+				<button onclick="playGame('papier')" class="my-button"><img src="toiletpaper1.jpg"></button>
 				<br>
-				<button onClick="playGame('scissors')" class="my-button"><img src="GiantScissors.jpg"></button>
+				<button onClick="playGame('schere')" class="my-button"><img src="GiantScissors.jpg"></button>
 			</div>
 			<div id="message">
-				Player Chose: <span id="player-choice"> n/a </span>
+				Spieler wählte: <span id="player-choice"> n/a </span>
 				<br>
-				Computer Chose: <span id="computer-choice"> n/a </span>
+				Computer wählte: <span id="computer-choice"> n/a </span>
 				<br>
-				Result: <span id="result"> n/a </span>
+				Ergebnis: <span id="result"> n/a </span>
 				<br>
-				<button onclick="playAgain()"> Play Again? </button>
+				<button onclick="playAgain()"> Spiel nochmal? </button>
 			</div>
 			<div id = "tracker">
 				Wins: <span id = "wins"> n/a </span>
